# opentelemetry-python-genai

./: .gitignore  .weaver.toml  AGENTS.md  CONTRIBUTING.md  RELEASING.md  dev-requirements-conformance.txt  dev-requirements.txt  docs-requirements.txt  eachdist.ini  pyproject.toml  pytest.ini  tox.ini  versions.env
.github/: pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/instructions/: instrumentation.instructions.md  util-genai.instructions.md
.github/skills/migrate-from-openinference/: SKILL.md
.github/skills/review-migration/: SKILL.md
.github/skills/write-conformance-tests/: SKILL.md
.github/workflows/: _prepare-release-package.yml  _release-package.yml  changelog.yml  check-links.yml  check_links_config.json  ci.yml  codeql-analysis.yml  lint.yml  misc.yml  package-prepare-patch-release.yml  package-prepare-release.yml  package-release.yml  release-all-prepare.yml  release-all.yml  scorecard.yml  stale.yml  test.yml
docs/: conf.py  index.rst
docs/instrumentation/: openai.rst
instrumentation/: README.md
instrumentation/opentelemetry-instrumentation-anthropic/: CHANGELOG.md  pyproject.toml
instrumentation/opentelemetry-instrumentation-anthropic/examples/manual/: requirements.txt
instrumentation/opentelemetry-instrumentation-anthropic/examples/zero-code/: requirements.txt
instrumentation/opentelemetry-instrumentation-anthropic/tests/: conftest.py  test_conformance.py
instrumentation/opentelemetry-instrumentation-anthropic/tests/conformance/: inference.py  tool_calling.py
instrumentation/opentelemetry-instrumentation-claude-agent-sdk/: CHANGELOG.md  pyproject.toml
instrumentation/opentelemetry-instrumentation-claude-agent-sdk/tests/: conftest.py
instrumentation/opentelemetry-instrumentation-genai-anthropic/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-genai-anthropic/.changelog/: +async-stream-wrappers.added  +initial-implementation.added  +messages-stream-helper.added  +sync-messages-create.added  +sync-streaming-support.added  111.fixed  60.changed  92.changed  96.added
instrumentation/opentelemetry-instrumentation-genai-anthropic/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_async_messages.py  test_async_wrappers.py  test_conformance.py  test_instrumentor.py  test_sync_messages.py
instrumentation/opentelemetry-instrumentation-genai-claude-agent-sdk/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-genai-claude-agent-sdk/.changelog/: +util-genai-dependency-range.changed  60.changed
instrumentation/opentelemetry-instrumentation-genai-claude-agent-sdk/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_instrumentor.py
instrumentation/opentelemetry-instrumentation-genai-langchain/: pyproject.toml
instrumentation/opentelemetry-instrumentation-genai-langchain/.changelog/: +genai-utils-handler.added  +llm-invocation-span-support.added  +log-metrics-provider.added  +wrapt-2-compat.fixed  124.added  132.removed  (+2 more)
instrumentation/opentelemetry-instrumentation-genai-openai/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-genai-openai-agents/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-genai-weaviate-client/: CHANGELOG.md  pyproject.toml
instrumentation/opentelemetry-instrumentation-google-genai/: CHANGELOG.md  README.rst  TODOS.md  pyproject.toml
instrumentation/opentelemetry-instrumentation-google-genai/.changelog/: +cache-read-input-tokens-attr.added  +reasoning-output-tokens-attr.added  10.changed  110.removed  119.added  133.fixed  151.changed  176.added  21.changed
instrumentation/opentelemetry-instrumentation-google-genai/dev/: README.md  call_instrumentation_lib_and_save_telemetry.py  main.env  pyproject.toml
instrumentation/opentelemetry-instrumentation-google-genai/examples/manual/: requirements.txt
instrumentation/opentelemetry-instrumentation-google-genai/examples/zero-code/: requirements.txt
instrumentation/opentelemetry-instrumentation-google-genai/src/opentelemetry/instrumentation/google_genai/: allowlist_util.py  dict_util.py  embeddings.py  generate_content.py  instrumentor.py  package.py  tool_call_wrapper.py  version.py
instrumentation/opentelemetry-instrumentation-google-genai/tests/: requirements.latest.txt  requirements.oldest.txt
instrumentation/opentelemetry-instrumentation-google-genai/tests/common/: base.py  otel_mocker.py
instrumentation/opentelemetry-instrumentation-google-genai/tests/embeddings/: test_embeddings.py  test_embeddings_e2e.py
instrumentation/opentelemetry-instrumentation-google-genai/tests/embeddings/cassettes/: test_embeddings_e2e.yaml
instrumentation/opentelemetry-instrumentation-google-genai/tests/generate_content/: nonstreaming_base.py  streaming_base.py  test_config_span_attributes.py  test_e2e.py  test_finish_reasons.py  util.py
instrumentation/opentelemetry-instrumentation-google-genai/tests/utils/: test_dict_util.py  test_tool_call_wrapper.py
instrumentation/opentelemetry-instrumentation-langchain/: CHANGELOG.md  pyproject.toml
instrumentation/opentelemetry-instrumentation-openai-agents-v2/: pyproject.toml
instrumentation/opentelemetry-instrumentation-openai-v2/: CHANGELOG.md  pyproject.toml
instrumentation/opentelemetry-instrumentation-weaviate/: pyproject.toml
policies/: genai_content_validation.rego  genai_span_validation.rego
scripts/: build.sh  build_a_package.sh  bump_package_dev_version.sh  changelog_template.j2  eachdist.py  generate_instrumentation_readme.py  prepare_package_for_patch_release.sh  prepare_package_for_release.sh  tox_matrix.py
util/opentelemetry-test-util-genai/: pyproject.toml
util/opentelemetry-test-util-genai/src/opentelemetry/test_util_genai/: __init__.py  _setup_weaver.py  conformance.py  fixtures.py  instrumentor.py  vcr.py
util/opentelemetry-util-genai/: AGENTS.md  CHANGELOG.md  README.rst  pyproject.toml  test-requirements.txt
(+272 files in other folders)
