# Used for local development, not to be published.
[project]
name = "opentelemetry-python-genai"
version = "0.0.0" # This is not used.
requires-python = ">=3.10"
dependencies = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-semantic-conventions",
  "opentelemetry-instrumentation",
  "opentelemetry-test-utils",
  "opentelemetry-test-util-genai",
  "opentelemetry-util-genai",
  "opentelemetry-instrumentation-genai-anthropic[instruments]",
  "opentelemetry-instrumentation-genai-claude-agent-sdk[instruments]",
  "opentelemetry-instrumentation-google-genai[instruments]",
  "opentelemetry-instrumentation-genai-langchain[instruments]",
  "opentelemetry-instrumentation-genai-openai[instruments]",
  "opentelemetry-instrumentation-genai-openai-agents[instruments]",
  "opentelemetry-instrumentation-genai-weaviate-client[instruments]",
]


# https://docs.astral.sh/uv/reference/settings/
[tool.uv]
package = false # https://docs.astral.sh/uv/reference/settings/#package
required-version = ">=0.6.0"

# https://docs.astral.sh/uv/reference/settings/#sources
[tool.uv.sources]
opentelemetry-test-util-genai = { workspace = true }
opentelemetry-util-genai = { workspace = true }
opentelemetry-instrumentation-genai-anthropic = { workspace = true }
opentelemetry-instrumentation-genai-claude-agent-sdk = { workspace = true }
opentelemetry-instrumentation-google-genai = { workspace = true }
opentelemetry-instrumentation-genai-langchain = { workspace = true }
opentelemetry-instrumentation-genai-openai = { workspace = true }
opentelemetry-instrumentation-genai-openai-agents = { workspace = true }
opentelemetry-instrumentation-genai-weaviate-client = { workspace = true }


# https://docs.astral.sh/uv/reference/settings/#workspace
[tool.uv.workspace]
members = [
  "instrumentation/*",
  "util/opentelemetry-test-util-genai",
  "util/opentelemetry-util-genai",
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py310"
line-length = 79
extend-exclude = ["*_pb2*.py*"]
output-format = "concise"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# pylint: https://github.com/astral-sh/ruff/issues/970
select = [
  "I",   # isort
  "F",   # pyflakes
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "PLC", # pylint convention
  "PLE", # pylint error
  "Q",   # flake8-quotes
  "A",   # flake8-builtins
  "TID", # flake8-tidy-imports
]
ignore = [
  "E501", # line-too-long
]

[tool.ruff.lint.per-file-ignores]
"docs/**/*.*" = ["A001"]
"instrumentation/opentelemetry-instrumentation-google-genai/tests/*" = ["TID252"]

[tool.ruff.lint.isort]
detect-same-package = false # to not consider instrumentation packages as first-party
known-first-party = ["opentelemetry"]
known-third-party = [
  "pytest",
]


# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-rule-overrides
[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
reportPrivateUsage = false  # Ignore private attributes added by instrumentation packages.
# Add progressively instrumentation packages here.
include = [
  "instrumentation/opentelemetry-instrumentation-genai-anthropic",
  "instrumentation/opentelemetry-instrumentation-genai-claude-agent-sdk",
  "instrumentation/opentelemetry-instrumentation-genai-langchain",
  "instrumentation/opentelemetry-instrumentation-genai-weaviate-client",
  "util/opentelemetry-util-genai",
]
# We should also add type hints to the test suite - It helps on finding bugs.
# We are excluding for now because it's easier, and more important to add to the instrumentation packages.
exclude = [
  "instrumentation/opentelemetry-instrumentation-genai-anthropic/tests/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-anthropic/examples/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-claude-agent-sdk/tests/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-claude-agent-sdk/examples/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-langchain/tests/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-langchain/examples/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-weaviate-client/tests/**/*.py",
  "instrumentation/opentelemetry-instrumentation-genai-weaviate-client/examples/**/*.py",
  "util/opentelemetry-util-genai/tests/**/*.py",
]

[dependency-groups]
dev = [
    "tox",
    "tox-uv>=1",
    "pre-commit",
    "towncrier",
]
