[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-anthropic"
dynamic = ["version"]
description = "OpenTelemetry Anthropic instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "opentelemetry-api ~= 1.40",
  "opentelemetry-instrumentation ~= 0.61b0",
  "opentelemetry-semantic-conventions ~= 0.61b0",
  "opentelemetry-util-genai >= 0.4b0, <0.5b0",
]

[project.optional-dependencies]
instruments = ["anthropic >= 0.51.0"]

[project.entry-points.opentelemetry_instrumentor]
anthropic = "opentelemetry.instrumentation.anthropic:AnthropicInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-genai/tree/main/instrumentation/opentelemetry-instrumentation-anthropic"
Repository = "https://github.com/open-telemetry/opentelemetry-python-genai"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/anthropic/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/examples"]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "conformance: GenAI semconv conformance scenario (run via the *-conformance tox envs)",
]

[tool.towncrier]
directory = ".changelog"
filename = "CHANGELOG.md"
start_string = "<!-- changelog start -->\n"
template = "../../scripts/changelog_template.j2"
issue_format = "[#{issue}](https://github.com/open-telemetry/opentelemetry-python-genai/pull/{issue})"
wrap = true
issue_pattern = "^(\\d+)"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
